--- a/latin-quiz/verbs.html
+++ b/latin-quiz/verbs.html
@@ -13,6 +13,7 @@
             <div class="link-div">
                 <button class="link-button" id="verb-button" onclick="window.location.href='/latin-quiz/index.html'">Noun test </button>
                 <button class="link-button" id="adjective-button" onclick="window.location.href='/latin-quiz/adjectives.html'">Adjective test</button>
+                <button class="link-button" id="pronoun-button" onclick="window.location.href='/latin-quiz/pronouns.html'">Pronoun quiz</button>
             </div>
             <div class="button-container">
                 <div>
